# gemini_castnow

./: .gitignore  Cargo.toml  GEMINI.md  README.md  _README.md  commit_message.txt  issue_comment.md  issue_comment_15.md
src/: chromecast.rs  config.rs  lib.rs  main.rs  player_controls.rs  server.rs  settings.rs  utils.rs
tests/: play_dir_test.rs  player_controls_integration_test.rs  server_test.rs
